--- a/package.json
+++ b/package.json
@@ -4,25 +4,32 @@
   "description": "",
   "main": "dist/index.js",
   "scripts": {
+    "lint": "tslint --project tsconfig.json",
     "demo": "npm run build && npm run dev",
     "build:prod": "tsc ./src/index.ts --outDir ./dist/ --esModuleInterop true --resolveJsonModule",
     "build:dev": "tsc -w ./src/index.ts --outDir ./dist/ --esModuleInterop true --resolveJsonModule",
     "start:prod": "node ./dist/index.js dev",
-    "start:dev": "nodemon ./dist/index.js dev",
+    "start:dev": "nodemon ./dist/index.js",
     "start": "npm install && npm run start:prod"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.7",
+    "@types/mongoose": "^5.11.97",
+    "@typescript-eslint/eslint-plugin": "^2.18.0",
+    "@typescript-eslint/parser": "^2.18.0",
+    "eslint": "^6.8.0",
     "nodemon": "^2.0.15",
     "typescript": "^3.7.5"
   },
   "dependencies": {
-    "@types/bcrypt": "^5.0.0",
-    "@types/mongoose": "^5.11.97",
+    "@types/mysql": "^2.15.21",
+    "axios": "^0.26.0",
     "bcrypt": "^5.0.1",
     "express": "^4.17.1",
-    "mongoose": "^6.2.2"
+    "jsonwebtoken": "^8.5.1",
+    "mysql": "^2.18.1"
   }
 }
