--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "build:dev": "tsc -w ./src/index.ts --outDir ./dist/ --esModuleInterop true --resolveJsonModule",
     "start:prod": "node ./dist/index.js dev",
     "start:dev": "nodemon ./dist/index.js",
-    "start": "npm install && npm run start:prod"
+    "start": "npm install && npm run start:prod",
+    "sendMail": "node ./dist/Service/DomainsMailer.js"
   },
   "author": "",
   "license": "ISC",
@@ -27,10 +28,12 @@
   "dependencies": {
     "@types/jsonwebtoken": "^8.5.8",
     "@types/mysql": "^2.15.21",
+    "@types/nodemailer": "^6.4.4",
     "axios": "^0.26.0",
     "bcrypt": "^5.0.1",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "nodemailer": "^6.7.2"
   }
 }
