--- a/src/Data/Config.json
+++ b/src/Data/Config.json
@@ -1,6 +1,6 @@
 {
     "secret": "serkerss",
-    "smtpPass": "!@R6R@2fzLRa6R!",
+    "smtpPass": "eKm-SutzWqEN8a2",
     "smtpLogin": "support@site-creative.ru",
     "smtpUrl": "smtp.mail.ru"
 }
