--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "start:prod": "node ./dist/index.js dev",
     "start:dev": "nodemon ./dist/index.js",
     "start": "npm install && npm run start:prod",
-    "sendMail": "node ./dist/Service/DomainsMailer.js"
+    "sendMail": "node ./dist/Service/SendMailDomains.js"
   },
   "author": "",
   "license": "ISC",
@@ -31,6 +31,7 @@
     "@types/nodemailer": "^6.4.4",
     "axios": "^0.26.0",
     "bcrypt": "^5.0.1",
+    "discord.js": "^13.6.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1",
