--- a/src/Data/Config.json
+++ b/src/Data/Config.json
@@ -2,5 +2,7 @@
     "secret": "serkerss",
     "smtpPass": "eKm-SutzWqEN8a2",
     "smtpLogin": "support@site-creative.ru",
-    "smtpUrl": "smtp.mail.ru"
+    "smtpUrl": "smtp.mail.ru",
+    "botToken": "NzE4NDQwODk3NzU0MzAwNTAw.Xto6Og.mUTaHVguDCYqpNmq1kPl17l5NhI",
+    "botPrefix": "!"
 }
