--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "start:prod": "node ./dist/index.js dev",
     "start:dev": "nodemon ./dist/index.js",
     "start": "npm install && npm run start:prod",
-    "sendMail": "node ./dist/Service/SendMailDomains.js"
+    "sendMail": "node ./dist/Service/SendMailDomains.js",
+    "deploy": "pm2 kill && npm run build:prod && pm2 start index.js --name bot --restart-delay 3600000"
   },
   "author": "",
   "license": "ISC",
