--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "start:dev": "nodemon ./dist/index.js",
     "start": "npm install && npm run start:prod",
     "sendMail": "node ./dist/Service/SendMailDomains.js",
-    "deploy": "pm2 kill && npm run build:prod && pm2 start index.js --name bot --restart-delay 3600000"
+    "deploy": "pm2 kill && npm run build:prod && pm2 start ./dist/index.js --name bot --restart-delay 3600000"
   },
   "author": "",
   "license": "ISC",
@@ -27,11 +27,13 @@
     "typescript": "^3.7.5"
   },
   "dependencies": {
+    "@types/cors": "^2.8.12",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/mysql": "^2.15.21",
     "@types/nodemailer": "^6.4.4",
     "axios": "^0.26.0",
     "bcrypt": "^5.0.1",
+    "cors": "^2.8.5",
     "discord.js": "^13.6.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
